# crd

./: .flake8  .pre-commit-config.yaml  dev_requirements.txt  pyproject.toml
src/crd/: ali.py  formalsol.py  quadrature.py  typing.py
